dev:cleanup directory

--- a/app/SystemUI.module.scss
+++ b/app/SystemUI.module.scss
@@ -3,5 +3,5 @@
   min-width: 100dvw;
   min-height: 100dvh;
 
-  background: url("/abstract_purple.jpg") center/cover;
+  background: url("/abstract_pink.jpg") center/cover;
 }
