--- a/app/common.scss
+++ b/app/common.scss
@@ -42,6 +42,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   word-break: keep-all;
+  cursor: none;
 }
 
 ::selection {
