--- a/components/Widgets/Nudge/Nudge.module.scss
+++ b/components/Widgets/Nudge/Nudge.module.scss
@@ -2,9 +2,32 @@
 .nudge {
   border-radius: 1.6rem;
   width: clamp(10rem, 80%, 35rem);
-  padding: 1.6rem 0;
+  height: 4.8rem;
   color: oklch(var(--gray-950));
   font-size: 1.6rem;
-  text-align: center;
-  background-color: oklch(var(--gray-950) / 0.1);
+  background-color: oklch(var(--gray-950) / 0.05);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+// animate-nudge font-[500] text-xl
+.text {
+  background: linear-gradient(
+    to left in oklch,
+    oklch(var(--gray-950) / 0.3),
+    oklch(var(--gray-950)),
+    oklch(var(--gray-950) / 0.3)
+  );
+  background-size: 200%;
+  background-clip: text;
+  color: transparent;
+  font-weight: 700;
+  animation: nudge 1s linear infinite;
+}
+
+@keyframes nudge {
+  to {
+    background-position: 200%;
+  }
 }
