--- a/components/Widgets/Weather/Weather.module.scss
+++ b/components/Widgets/Weather/Weather.module.scss
@@ -32,9 +32,15 @@
 .position {
   font-size: 1.2rem;
   line-height: 1;
+  @media screen and (min-width: 1080px) {
+    font-size: 1.6rem;
+  }
 }
 .temp {
   font-size: 1.8rem;
   font-weight: 900;
   line-height: 1;
+  @media screen and (min-width: 1080px) {
+    font-size: 2.4rem;
+  }
 }
