--- a/components/Organisms/MenuBar/MenuBar.module.scss
+++ b/components/Organisms/MenuBar/MenuBar.module.scss
@@ -1,23 +1,42 @@
+@use "@/styles/variable/mixin" as m;
+
 .menuBar {
+  --menubar-height: 4rem;
+  --menubar-color: oklch(var(--gray-100));
   width: 100%;
-  height: 4rem;
+  height: var(--menubar-height);
   display: flex;
   align-items: center;
   padding: 1rem;
   position: fixed;
-}
-
-.bg {
-  position: absolute;
-  inset: 0;
-  z-index: 1;
-  background-color: oklch(var(--gray-950) / 0.1);
-  mask: linear-gradient(to bottom, white, black);
+  background-color: var(--menubar-color);
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: var(--menubar-height);
+  }
+  &::before {
+    left: 0;
+    @include m.reverse-radius(
+      $position: "bottom-right",
+      $size: var(--radius-0),
+      $color: var(--menubar-color)
+    ); // position:
+  }
+  &::after {
+    right: 0;
+    @include m.reverse-radius(
+      $position: "bottom-left",
+      $size: var(--radius-0),
+      $color: var(--menubar-color)
+    );
+  }
 }
 
 .logo {
   z-index: 2;
   width: 2.4rem;
   height: 2.4rem;
-  color: oklch(var(--gray-100));
+  color: var(--menubar-color);
 }
