feat: Add new weather icons

--- a/components/Organisms/MenuBar/MenuBar.module.scss
+++ b/components/Organisms/MenuBar/MenuBar.module.scss
@@ -2,7 +2,7 @@
 
 .menuBar {
   --menubar-height: 4rem;
-  --menubar-color: oklch(var(--gray-100));
+  --menubar-color: oklch(var(--magenta-050));
   width: 100%;
   height: var(--menubar-height);
   display: flex;
